Changed styles to TWSG away day design round 2 by Lucila. Replaced neon flashing pictures GIF with corporate colors GIF.

--- a/index.html
+++ b/index.html
@@ -3,40 +3,41 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Singapore Disrupted! DAMN SHIOK!</title>
-        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,800' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,100italic,800' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class="content">
-            <div class="tagline__image">
-                <img src="https://gallery.mailchimp.com/1b866991ed2f1b1f5f6d069b1/images/438cd786-a3be-4333-ba5d-65dd7e4d388b.gif">
+        <div class="theme__container">
+            <div class="theme__shiok">
+                <div>Damn</div>
+                <div>Shiok!</div>
             </div>
+            <div class="theme__tagline">
+                Singapore Disrupted
+            </div>
+        </div>
+        <div class="content">
             <div class="content__top">
-                <div class="header__container">
-                    <div class="header__tw">
-                        ThoughtWorks Singapore
-                    </div>
+                <div class="header__container container--with-border">
                     <div class="header__away-day">
                         Away Day 2016
                     </div>
-                </div>
-                <div class="details__container">
-                    <div class="details__text--bold">
-                        27 to 29 May
+                    <div class="header__tw">
+                        <div>ThoughtWorks</div>
+                        <div>Singapore</div>
                     </div>
-                    <div class="details__text--italic">
-                        at
+                </div>
+                <div class="details__container container--with-border">
+                    <div class="details__text--bold">
+                        27, 28 & 29 May
                     </div>
                     <div class="details__text--bold">
                         Changi Cove, Singapore
                     </div>
                 </div>
-                <div class="tagline__container">
-                    Singapore Disrupted
-                </div>
             </div>
             <div class="buttons__container">
-                <a class="button" title="Register attendance" href="https://docs.google.com/a/thoughtworks.com/forms/d/1gvIPM4M7rd5xEhl3eXGF5AhfEP27QSgy9ZyEQ8OvKIw/viewform?c=0&amp;w=1" target="_blank">Register attendance</a>
+                <a class="button" title="Register attendance" href="https://docs.google.com/a/thoughtworks.com/forms/d/1gvIPM4M7rd5xEhl3eXGF5AhfEP27QSgy9ZyEQ8OvKIw/viewform?c=0&amp;w=1" target="_blank">Register</a>
                 <a class="button" title="Submit talk" href="https://docs.google.com/a/thoughtworks.com/spreadsheets/d/1FCbTAejq8_bWD1Q9wf5yorUL6rJBtTjAgi1nrblXRGM/edit?usp=sharing" target="_blank">Submit talk</a>
                 <a class="button -last" title="Reserve room" href="https://docs.google.com/a/thoughtworks.com/spreadsheets/d/1ldbglLqy6pEd_3s_1KiG0Sh2YM8Wf8iYbjAZvxvbUeQ/edit?usp=sharing" target="_blank">Reserve room</a>
             </div>
