Added font files. Damn styling tweak.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Singapore Disrupted! DAMN SHIOK!</title>
-        <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,100italic,800' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div class="theme__container">
-            <div class="theme__shiok">
-                <div>Damn</div>
+            <div class="theme__damn-shiok">
+                <div class="theme__damn">Damn</div>
                 <div>Shiok!</div>
             </div>
             <div class="theme__tagline">
