Changed color pulsing to css transitions. Styling tweaks.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class="theme__container">
+        <div class="theme__container color__pulsing">
             <div class="theme__damn-shiok">
                 <div class="theme__damn">Damn</div>
                 <div>Shiok!</div>
@@ -22,13 +22,12 @@
                         Away Day 2016
                     </div>
                     <div class="header__tw">
-                        <div>ThoughtWorks</div>
-                        <div>Singapore</div>
+                        ThoughtWorks Singapore
                     </div>
                 </div>
                 <div class="details__container container--with-border">
                     <div class="details__text--bold">
-                        27, 28 & 29 May
+                        27, 28 &amp; 29 May
                     </div>
                     <div class="details__text--bold">
                         Changi Cove, Singapore
