--- a/photobook.html
+++ b/photobook.html
@@ -13,7 +13,7 @@
               <div>Shiok!</div>
           </div>
           <div class="theme__tagline">
-              What??
+              according to TWers
           </div>
       </div>
         <div class="content">
