--- a/photobook.html
+++ b/photobook.html
@@ -17,6 +17,8 @@
           </div>
       </div>
         <div class="content">
+          <div class="photobook">
 
+          </div>
         </div>
     </body>
