--- a/photobookv2.html
+++ b/photobookv2.html
@@ -41,7 +41,7 @@
                 <a class="button -last" title="Reserve room" href="https://docs.google.com/a/thoughtworks.com/spreadsheets/d/1ldbglLqy6pEd_3s_1KiG0Sh2YM8Wf8iYbjAZvxvbUeQ/edit?usp=sharing" target="_blank">Reserve room</a>
             </div>
             <div class="photobook">
-              <h2 class="theme__tagline">What is damn shiok?</h2>
+              <h2 class="photobook-header theme__tagline">What is damn shiok?</h2>
             </div>
         </div>
     </body>
