Put photobook on main page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Singapore Disrupted! DAMN SHIOK!</title>
         <link rel="stylesheet" href="styles.css">
+        <script defer src="/bundle.js" charset="utf-8"></script>
     </head>
     <body>
         <div class="theme__container color__pulsing">
@@ -34,10 +35,13 @@
                     </div>
                 </div>
             </div>
-            <div class="buttons__container">
+            <div class="buttons__container container--with-border">
                 <a class="button" title="Register attendance" href="https://docs.google.com/a/thoughtworks.com/forms/d/1gvIPM4M7rd5xEhl3eXGF5AhfEP27QSgy9ZyEQ8OvKIw/viewform?c=0&amp;w=1" target="_blank">Register</a>
                 <a class="button" title="Submit talk" href="https://docs.google.com/a/thoughtworks.com/spreadsheets/d/1FCbTAejq8_bWD1Q9wf5yorUL6rJBtTjAgi1nrblXRGM/edit?usp=sharing" target="_blank">Submit talk</a>
                 <a class="button -last" title="Reserve room" href="https://docs.google.com/a/thoughtworks.com/spreadsheets/d/1ldbglLqy6pEd_3s_1KiG0Sh2YM8Wf8iYbjAZvxvbUeQ/edit?usp=sharing" target="_blank">Reserve room</a>
+            </div>
+            <div class="photobook">
+              <h2 class="photobook-header theme__tagline">What is damn shiok?</h2>
             </div>
         </div>
     </body>
