--- a/index.html
+++ b/index.html
@@ -40,8 +40,16 @@
                 <a class="button" title="Submit talk" href="https://docs.google.com/a/thoughtworks.com/spreadsheets/d/1FCbTAejq8_bWD1Q9wf5yorUL6rJBtTjAgi1nrblXRGM/edit?usp=sharing" target="_blank">Submit talk</a>
                 <a class="button -last" title="Reserve room" href="https://docs.google.com/a/thoughtworks.com/spreadsheets/d/1ldbglLqy6pEd_3s_1KiG0Sh2YM8Wf8iYbjAZvxvbUeQ/edit?usp=sharing" target="_blank">Reserve room</a>
             </div>
-            <div class="photobook">
-              <h2 class="photobook-header theme__tagline">What is damn shiok?</h2>
+            <div class="buttons__container container--with-border">
+              <div class="theme__tagline">
+                  LATEST UPDATES
+              </div>
+              <div class="newsletter-list">
+                <a class="button newsletter" href="/newsletters/18-apr-2016" target="_blank">18 April 2016</a>
+              </div>
             </div>
+            <section class="photobook">
+              <h2 class="photobook-header theme__tagline">What is damn shiok?</h2>
+            </section>
         </div>
     </body>
