--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                   LATEST UPDATES
               </div>
               <div class="newsletter-list">
+                <a class="button newsletter" href="/newsletters/26-may-2016" target="_blank">26 May 2016</a>
                 <a class="button newsletter" href="/newsletters/24-may-2016" target="_blank">24 May 2016</a>
                 <a class="button newsletter" href="/newsletters/16-may-2016" target="_blank">16 May 2016</a>
                 <a class="button newsletter" href="/newsletters/8-may-2016" target="_blank">8 May 2016</a>
